--- a/.gitignore
+++ b/.gitignore
@@ -765,3 +765,7 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# data directory
+/code/data/**
+!/code/data/README.md
